RESOLVED FIXED172337
imported/w3c/web-platform-tests/url/failure.html crashes on debug builds
https://bugs.webkit.org/show_bug.cgi?id=172337
Summary imported/w3c/web-platform-tests/url/failure.html crashes on debug builds
Chris Dumez
Reported 2017-05-18 20:57:05 PDT
imported/w3c/web-platform-tests/url/failure.html crashes on debug builds: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000001041eaa67 WTFCrash + 39 (Assertions.cpp:292) 1 com.apple.WebCore 0x000000010b997987 WebCore::ContentExtensions::ContentExtensionsBackend::actionsForResourceLoad(WebCore::ResourceLoadInfo const&) const + 199 (ContentExtensionsBackend.cpp:85) 2 com.apple.WebCore 0x000000010e2f6f36 WebCore::UserContentProvider::actionsForResourceLoad(WebCore::ResourceLoadInfo const&, WebCore::DocumentLoader&) + 102 (UserContentProvider.cpp:117) 3 com.apple.WebCore 0x000000010be48bb5 WebCore::DOMWindow::open(WebCore::DOMWindow&, WebCore::DOMWindow&, WTF::String const&, WTF::AtomicString const&, WTF::String const&) + 565 (DOMWindow.cpp:2248) 4 com.apple.WebCore 0x000000010ca4502d WebCore::jsDOMWindowInstanceFunctionOpenCaller(JSC::ExecState*, WebCore::JSDOMWindow*, JSC::ThrowScope&) + 893 (JSDOMWindow.cpp:31246) 5 com.apple.WebCore 0x000000010ca0936e long long WebCore::BindingCaller<WebCore::JSDOMWindow>::callOperation<&(WebCore::jsDOMWindowInstanceFunctionOpenCaller(JSC::ExecState*, WebCore::JSDOMWindow*, JSC::ThrowScope&)), (WebCore::CastedThisErrorBehavior)0>(JSC::ExecState*, char const*) + 670 (JSDOMBindingCaller.h:71) 6 com.apple.WebCore 0x000000010c989e3c WebCore::jsDOMWindowInstanceFunctionOpen(JSC::ExecState*) + 28 (JSDOMWindow.cpp:31230) 7 ??? 0x0000207ffe401028 0 + 35734098546728 8 com.apple.JavaScriptCore 0x0000000103d2fc17 llint_entry + 29875 9 ??? 0x0000207ffe45ac12 0 + 35734098914322 10 com.apple.JavaScriptCore 0x0000000103d2fc17 llint_entry + 29875 11 ??? 0x0000207ffe42a62a 0 + 35734098716202 12 ??? 0x0000207ffe42f9a7 0 + 35734098737575 13 com.apple.JavaScriptCore 0x0000000103d2fc17 llint_entry + 29875 14 com.apple.JavaScriptCore 0x0000000103d2fc91 llint_entry + 29997 15 com.apple.JavaScriptCore 0x0000000103d2854e vmEntryToJavaScript + 334 16 com.apple.JavaScriptCore 0x0000000103aeee01 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) + 353 (JITCode.cpp:81) 17 com.apple.JavaScriptCore 0x0000000103a9c8c5 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 1285 (Interpreter.cpp:954) 18 com.apple.JavaScriptCore 0x0000000103230e8e JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 190 (CallData.cpp:39) 19 com.apple.JavaScriptCore 0x00000001032310ca JSC::profiledCall(JSC::ExecState*, JSC::ProfilingReason, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 106 (CallData.cpp:59) 20 com.apple.JavaScriptCore 0x0000000103be54d6 JSC::JSJobMicrotask::run(JSC::ExecState*) + 518 (JSJob.cpp:75) 21 com.apple.WebCore 0x000000010c91d967 WebCore::JSMainThreadExecState::runTask(JSC::ExecState*, JSC::Microtask&) + 71 (JSMainThreadExecState.h:89) 22 com.apple.WebCore 0x000000010ca5424a WebCore::JSDOMWindowMicrotaskCallback::call() + 234 (JSDOMWindowBase.cpp:217) 23 com.apple.WebCore 0x000000010ca5111d WebCore::JSDOMWindowBase::queueTaskToEventLoop(JSC::JSGlobalObject&, WTF::Ref<JSC::Microtask>&&)::$_0::operator()() + 29 (JSDOMWindowBase.cpp:240) 24 com.apple.WebCore 0x000000010ca5106c WTF::Function<void ()>::CallableWrapper<WebCore::JSDOMWindowBase::queueTaskToEventLoop(JSC::JSGlobalObject&, WTF::Ref<JSC::Microtask>&&)::$_0>::call() + 28 (Function.h:89) 25 com.apple.WebCore 0x000000010b64e893 WTF::Function<void ()>::operator()() const + 99 (Function.h:50) 26 com.apple.WebCore 0x000000010b64e6fb WebCore::ActiveDOMCallbackMicrotask::run() + 75 (ActiveDOMCallbackMicrotask.cpp:48) 27 com.apple.WebCore 0x000000010d6671b2 WebCore::MicrotaskQueue::performMicrotaskCheckpoint() + 226 (Microtasks.cpp:84) 28 com.apple.WebCore 0x000000010d666f65 WebCore::MicrotaskQueue::timerFired() + 21 (Microtasks.cpp:71) 29 com.apple.WebCore 0x000000010d668b98 void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (WebCore::MicrotaskQueue::*&)(), WebCore::MicrotaskQueue*>&>(std::__1::__bind<void (WebCore::MicrotaskQueue::*&)(), WebCore::MicrotaskQueue*>&&&) + 248 (__functional_base:441) 30 com.apple.WebCore 0x000000010d668a6c std::__1::__function::__func<std::__1::__bind<void (WebCore::MicrotaskQueue::*&)(), WebCore::MicrotaskQueue*>, std::__1::allocator<std::__1::__bind<void (WebCore::MicrotaskQueue::*&)(), WebCore::MicrotaskQueue*> >, void ()>::operator()() + 44 (functional:1407) 31 com.apple.WebCore 0x000000010b62c55a std::__1::function<void ()>::operator()() const + 26 (functional:1793) 32 com.apple.WebCore 0x000000010b62c46c WebCore::Timer::fired() + 28 (Timer.h:135) 33 com.apple.WebCore 0x000000010e1f8952 WebCore::ThreadTimers::sharedTimerFiredInternal() + 482 (ThreadTimers.cpp:121) 34 com.apple.WebCore 0x000000010e1f9ba1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 33 (ThreadTimers.cpp:70) 35 com.apple.WebCore 0x000000010e1f9b6d void std::__1::__invoke_void_return_wrapper<void>::__call<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&>(WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&&&) + 45 (__functional_base:441) 36 com.apple.WebCore 0x000000010e1f9b0c std::__1::__function::__func<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, std::__1::allocator<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0>, void ()>::operator()() + 44 (functional:1407) 37 com.apple.WebCore 0x000000010b62c55a std::__1::function<void ()>::operator()() const + 26 (functional:1793) 38 com.apple.WebCore 0x000000010d464dbf WebCore::MainThreadSharedTimer::fired() + 111 (MainThreadSharedTimer.cpp:53) 39 com.apple.WebCore 0x000000010d4651c9 WebCore::timerFired(__CFRunLoopTimer*, void*) + 41 (MainThreadSharedTimerCF.cpp:74) 40 com.apple.CoreFoundation 0x00007fff87bc2af4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 41 com.apple.CoreFoundation 0x00007fff87bc2783 __CFRunLoopDoTimer + 1075 42 com.apple.CoreFoundation 0x00007fff87bc22da __CFRunLoopDoTimers + 298 43 com.apple.CoreFoundation 0x00007fff87bb97d1 __CFRunLoopRun + 1841 44 com.apple.CoreFoundation 0x00007fff87bb8e38 CFRunLoopRunSpecific + 296 45 DumpRenderTree 0x00000001027867c3 runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 6339 (DumpRenderTree.mm:2020) 46 DumpRenderTree 0x0000000102784e4d runTestingServerLoop() + 333 (DumpRenderTree.mm:1174) 47 DumpRenderTree 0x00000001027843d2 dumpRenderTree(int, char const**) + 450 (DumpRenderTree.mm:1277) 48 DumpRenderTree 0x00000001027871dd DumpRenderTreeMain(int, char const**) + 125 (DumpRenderTree.mm:1392) 49 DumpRenderTree 0x0000000102801af2 main + 34 (DumpRenderTreeMain.mm:34) 50 libdyld.dylib 0x00007fff8af0e5ad start + 1 Started happening when I re-sync'd the test from upstream.
Attachments
Patch (9.55 KB, patch)
2017-11-21 03:31 PST, Ms2ger (he/him; ⌚ UTC+1/+2)
ews-watchlist: commit-queue-
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (2.58 MB, application/zip)
2017-11-21 04:39 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (2.95 MB, application/zip)
2017-11-21 04:56 PST, EWS Watchlist
no flags
Patch (2.12 KB, patch)
2017-11-27 11:30 PST, Alex Christensen
no flags
Patch (2.13 KB, patch)
2017-11-27 11:35 PST, Alex Christensen
cdumez: review+
Chris Dumez
Comment 1 2017-05-18 21:01:44 PDT
Updated test expectations via <http://trac.webkit.org/changeset/217095>.
Alexey Proskuryakov
Comment 2 2017-05-20 22:16:11 PDT
Is it passing through invalid URLs? ASSERT_WITH_MESSAGE(urlString.containsOnlyASCII(), "A decoded URL should only contain ASCII characters. The matching algorithm assumes the input is ASCII.");
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 3 2017-11-21 03:31:21 PST
WebKit Commit Bot
Comment 4 2017-11-21 04:18:29 PST
The commit-queue encountered the following flaky tests while processing attachment 327397 [details]: The commit-queue is continuing to process your patch.
EWS Watchlist
Comment 5 2017-11-21 04:38:59 PST
Comment on attachment 327397 [details] Patch Attachment 327397 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5319113 New failing tests: imported/w3c/web-platform-tests/url/failure.html
EWS Watchlist
Comment 6 2017-11-21 04:39:01 PST
Created attachment 327399 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 7 2017-11-21 04:56:29 PST
Comment on attachment 327397 [details] Patch Attachment 327397 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/5319117 New failing tests: imported/w3c/web-platform-tests/url/failure.html
EWS Watchlist
Comment 8 2017-11-21 04:56:31 PST
Created attachment 327401 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alex Christensen
Comment 9 2017-11-27 11:30:53 PST
Alex Christensen
Comment 10 2017-11-27 11:35:09 PST
Alex Christensen
Comment 11 2017-11-27 12:23:28 PST
Alex Christensen
Comment 12 2017-11-27 12:23:47 PST
*** Bug 179919 has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 13 2017-11-27 12:25:01 PST
Alex Christensen
Comment 14 2021-07-07 10:15:56 PDT
Alex Christensen
Comment 15 2021-07-07 11:34:31 PDT
Note You need to log in before you can comment on or make changes to this bug.