imported/w3c/web-platform-tests/url/failure.html crashes on debug builds https://bugs.webkit.org/show_bug.cgi?id=172337

Reviewed by Chris Dumez.

There were two problems:
1. Invalid URLs can contain non-ASCII characters in its UTF8 representation.
We should not put these URLs into content extension finite state machines.  They won't load anyways.
2. If we don't have any content extensions installed, we still call String.utf8 unnecessarily.  Let's not.

* contentextensions/ContentExtensionsBackend.cpp:
(WebCore::ContentExtensions::ContentExtensionsBackend::actionsForResourceLoad const):



Canonical link: https://commits.webkit.org/196047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225186 268f45cc-cd09-0410-ab3c-d52691b4dbfc